$Id: History,v 1.6 1999-05-19 17:32:59 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May 19th, 99 J.Allison (tag intercoms-01-00-05)
- Protected G4UIcommand.cc with if (aToken.length()>0...

May 19th, 99 J.Allison (tag intercoms-01-00-04)
- Improvements suggested by Code Wizard in G4VVisManager.

May 7th, 99 J.Allison (tag intercoms-01-00-03)
- Added newVal.resize( parameter.entries() ) to G4UIcommand::SetParameter.

Apr 28, 99 J.Allison (tag intercoms-01-00-02)
- Moved G4VVisManager and G4VGraphicsScene from graphics_reps.

Paulo Mora de Freitas (tag intercoms-01-00-01)
- Added abstract interface G4VFlavoredParallelWorld and
  G4VGlobalFastSimulationManager so we can decouple vis from parametrisation.

Dec 03, 98 J.Allison (tag intercoms-00-04-04)
- Protected G4UImanager::SetCoutDestination with #ifdef G4STREAM.

Dec 02, 98 M.Asai (tag intercoms-00-04-03)
- G4UnitsMessenger is constructed/destructed by G4UImanager.

Nov 27, 98 M.Asai (tag intercoms-00-04-02)
- G4UnitsMessenger has been inported from global/management to avoid a loop dependency.

Nov 25, 98 J.Allison (tag intercoms-00-04-01)
- Allowed quotation-mark-enclosed blank-embedded parameters in GetCurrentValue.