@@ -1,4 +1,4 @@
-$Id: History,v 1.6 1999-05-19 17:32:59 stesting Exp $
+$Id: History,v 1.7 1999-10-04 15:15:28 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct 4th, 99 J.Allison (tag intercoms-V00-01-00)
+- Augmented G4VGraphicsScene to include AddPrimitive methods for
+  G4Polyline, G4Text, G4Circle, G4Square, G4Polymarker, G4Polyhedron
+  and G4NURBS.
 
 May 19th, 99 J.Allison (tag intercoms-01-00-05)
 - Protected G4UIcommand.cc with if (aToken.length()>0...
